Upgrade deps. [distro]